--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "axios": "^1.9.0",
+    "dayjs": "^1.11.13",
     "expo": "^53.0.9",
     "expo-image-picker": "~16.1.4",
     "expo-status-bar": "~2.2.3",
